# SwiftNet

./: .gitignore  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux_run_tests.yml  run_all_tests.yml
docs/: usage.md
src/: .clangd  ;  CMakeLists.txt  Makefile  add_debug_flags.c  append_to_packet.c  append_to_packet.h  cleanup.c  cleanup_connection.c  create_packet_buffer.c  destroy_packet_buffer.c  execute_packet_callback.c  generic_functions.c  generic_functions.h  handle_packets.c  handle_packets.h  handle_responding.c  include.h  initialize_client_socket.c  initialize_client_socket.h  initialize_server_socket.c  initialize_server_socket.h  initialize_swift_net.c  initialize_swift_net.h  main.h  make_request.c  make_response.c  process_packets.c  read_from_packet.c  send_packet.c  send_packet.h  swift_net.c  swift_net.h
src/client/: generic_functions.h  include_client.h  initialize_client_socket.h  send_data_to_server.h
src/cmake/: deadlightreal-swiftnetConfig.cmake.in  morcules-swiftnetConfig.cmake.in  swiftnetConfig.cmake.in
src/internal/: bind_bpf_to_interface.c  check_existing_listener.c  datatype_allocator.c  datatype_stack.c  datatype_vector.c  get_bpf_device.c  get_default_interface.c  get_default_interface_and_mac.c  get_mtu.c  get_public_ip.c  internal.h  pcap_open.c  pcap_send.c  setup_bpf_settings.c
src/server/: generic_functions.h  include_server.h  initialize_server_socket.h  main.h
tests/: .clangd  CMakeLists.txt  Makefile  build_tests.sh  config.h  entitlements.plist  run_all_tests  run_all_tests.c  test_sending_data  test_sending_data.c
tests/output/: test_basic_client_server_communication  test_client_sending_large_packet_to_server  test_multiple_server_communication  test_server_sending_large_packet_to_client
tests/sending_large_data/: hash.h
tests/sending_large_data/client/: Makefile  main  main.c
tests/sending_large_data/server/: Makefile  main  main.c
tests/sending_large_data/server/main.dSYM/Contents/Resources/DWARF/: main
tests/sending_large_data/server/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tests/src/: making_request.c  run_tests.c  run_tests.h  sending_packet.c  test_basic_client_server_communication.c  test_client_making_requests.c  test_client_sending_large_packet_to_server.c  test_multiple_server_communication.c  test_server_making_requests.c  test_server_sending_large_packet_to_client.c
tests/test_sending_data.dSYM/Contents/: Info.plist
tests/test_sending_data.dSYM/Contents/Resources/DWARF/: test_sending_data
tests/test_sending_data.dSYM/Contents/Resources/Relocations/aarch64/: test_sending_data.yml
tests/test_sending_data/client/: Makefile  main  main.c
tests/test_sending_data/server/: Makefile  main  main.c
tests/test_sending_data/server/main.dSYM/Contents/Resources/DWARF/: main
tests/test_sending_data/server/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
